Allowed user to enter email, amount and feature request before checkout. Once info is entered the user will be redirected to checkout and the amount entered will be the amount billed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-stripe.api.Key = ENTER SECRET KEY
-stripe.public.key = ENTER PUBLIC KEY
-stripe.webhook.secret = ENTER WEBHOOK KEY
+stripe.api.Key = SECRET KEY
+stripe.public.key = PUBLIC KEY - find here: 
+stripe.webhook.secret = SECRET KEY - 
 
 # Implement environment variables
