Implemented Customer Email and feature Request to be sent to stripe API, Payments now include metadata and email

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ build/
 
 ### properties ###
 */*.properties
-**/main/resources/application.properties
+!**/main/resources/application.properties
+
