--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-stripe.api.Key = SECRET KEY
-stripe.public.key = PUBLIC KEY - find here: 
-stripe.webhook.secret = SECRET KEY - 
+stripe.api.Key = PRIVATE KEY
+stripe.public.key = PUBLIC KEY
+stripe.webhook.secret = SECRET KEY
 
 # Implement environment variables
