--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,13 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+src/main/resources/application.properties
 ### VS Code ###
 .vscode/
 
 ### properties ###
 */*.properties
 !**/main/resources/application.properties
+
+
 
